--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-gulp-setup",
-  "description": "A example stack with gulp and angular",
+  "description": "guideblog",
   "main": "index.js",
   "authors": [
     "alexpchin <alex@alexchin.co.uk>"
